test/libsolidity/syntaxTests/comments/multiline_unicode_direction_override_1.sol
contract C {
    function f() public pure
    {
        // PDF
        /*underflow ‬*/
    }
}
// ----
// ParserError 8936: (71-83): Unicode direction override underflow in comment or string literal.
